<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_Item_1"
            android:icon="@drawable/ic_email_logo"
            android:title="@string/menu_Item_1" />
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_Item_2"
                    android:icon="@drawable/ic_facebook_logo"
                    android:title="@string/menu_Item_2" />
                <item
                    android:id="@+id/menu_Item_3"
                    android:icon="@drawable/ic_google_logo"
                    android:title="@string/menu_Item_3" />
            </group>
        </menu>
    </item>

</menu>